# modern_cpp_edu

./: .gitignore  CMakeLists.txt  README.md
josuttis_cppstd11/: CMakeLists.txt
josuttis_cppstd20/: CMakeLists.txt
rainer_grimm_modernes_c++/: CMakeLists.txt
